[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/default.png" type="Texture" id=1]
[ext_resource path="res://src/Hunter/Bullet.gd" type="Script" id=2]
[ext_resource path="res://assets/hit.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 2.43511

[node name="Bullet" type="Area2D"]
collision_layer = 3088
collision_mask = 2064
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.005, 0.005 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HitAudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="finished" from="HitAudioStreamPlayer" to="." method="_on_HitAudioStreamPlayer_finished"]
